--- a/static/css/components/edit-toolbar--tablet.css
+++ b/static/css/components/edit-toolbar--tablet.css
@@ -2,7 +2,8 @@
 div#editTools,
 div.editButton,
 div#editHistory {
-  padding: var(--spacing-3xs) var(--spacing-inset-xs) 0 var(--spacing-inset-sm);
+  padding: var(--spacing-stack-xs) var(--spacing-inline-sm) 0
+    var(--spacing-inline-md);
   margin-top: -5px;
   float: right;
 }
